--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,30 @@
-# Framework principal para construir la API
-fastapi==0.115.6
-
-# Servidor ASGI para ejecutar FastAPI
-uvicorn==0.34.0
-
-# ORM para interactuar con la base de datos PostgreSQL
-SQLAlchemy==2.0.37
-
-# Cliente precompilado para PostgreSQL (psycopg v3)
-psycopg[binary]==3.2.4  # Usar psycopg v3 como backend para PostgreSQL
-
-# Validaciones y configuración para FastAPI
-pydantic==2.10.5
-pydantic-core==2.27.2
-pydantic-settings==2.1.0  # Manejo de variables de entorno
-
-# Librería para manejar archivos .env
-python-dotenv==1.0.1
-
-# Librerías para solicitudes HTTP (pueden ser útiles en algunos endpoints)
-httpx==0.28.1
-httpcore==1.0.7
-sniffio==1.3.1
-
-# Librerías adicionales requeridas por otras dependencias
-annotated-types==0.7.0    # Tipos anotados para Pydantic y validaciones
-typing_extensions==4.12.2 # Soporte adicional para tipos en Python
-anyio==4.8.0              # Soporte para I/O asincrónico
-
-# Certificados y manejo de dominios para solicitudes HTTP
-certifi==2024.12.14       # Certificados SSL
-idna==3.10                # Manejo de nombres de dominio internacionales
-
-# Librerías base para FastAPI y Uvicorn
-starlette==0.41.3         # Framework subyacente utilizado por FastAPI
-h11==0.14.0               # Implementación de HTTP/1.1 para ASGI
-
-# Soporte para CLI y comandos adicionales
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2024.12.14
 click==8.1.8
+fastapi==0.115.6
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+joblib==1.4.2
+numpy==2.2.2
+pandas==2.2.3
+psycopg==3.2.4
+psycopg-binary==3.2.4
+pydantic==2.10.5
+pydantic-settings==2.1.0
+pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+scikit-learn==1.6.1
+scipy==1.15.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.37
+starlette==0.41.3
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+tzdata==2025.1
+uvicorn==0.34.0
