--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,14 @@ anyio==4.8.0
 certifi==2024.12.14
 click==8.1.8
 fastapi==0.115.6
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 joblib==1.4.2
 numpy==2.2.2
+packaging==24.2
 pandas==2.2.3
 psycopg==3.2.4
 psycopg-binary==3.2.4
