--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
+    "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
