--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,10 +8,10 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
-joblib==1.4.2
-numpy==2.2.2
+joblib
+numpy
 packaging==24.2
-pandas==2.2.3
+pandas
 psycopg-binary==3.2.4
 pydantic==2.10.5
 pydantic-settings==2.1.0
@@ -19,8 +19,8 @@ pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-scikit-learn==1.6.1
-scipy==1.15.1
+scikit-learn
+scipy
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
