--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,34 @@
-annotated-types==0.7.0
-anyio==4.8.0
-certifi==2024.12.14
-click==8.1.8
+# --- Framework Core ---
 fastapi==0.115.6
+uvicorn==0.34.0
 gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-idna==3.10
-joblib
-numpy
-packaging==24.2
-pandas
-psycopg-binary==3.2.4
 pydantic==2.10.5
 pydantic-settings==2.1.0
-pydantic_core==2.27.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-scikit-learn
-scipy
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.37
 starlette==0.41.3
-threadpoolctl==3.5.0
-typing_extensions==4.12.2
+
+# --- Base de Datos y Configuración ---
+SQLAlchemy==2.0.37
+psycopg-binary==3.2.4
+python-dotenv==1.0.1
+
+# --- Procesamiento de Datos (Versiones estables para Cloud) ---
+numpy==1.26.4
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.2
 tzdata==2025.1
-uvicorn==0.34.0
+
+# --- Machine Learning y Ciencia (Opcionales, consumen mucha RAM) ---
+scipy==1.13.1
+scikit-learn==1.5.0
+joblib==1.4.2
+threadpoolctl==3.5.0
+
+# --- Utilidades de Red ---
+httpx==0.28.1
+httpcore==1.0.7
+certifi==2024.12.14
+idna==3.10
+sniffio==1.3.1
+anyio==4.8.0
+h11==0.14.0
